Live Volume Steps [2/2]
-Volume steps changes are instant, no need to reboot!

LiveVolumeSteps: transitioned volume steps volume normalization.

-This calculates an equivalent volume ratio for the new
volume steps.
-example: Volume steps are set at 60. Volume is set at 5. That is
very low volume. Then volume steps are switched to 5. Now you
are instantly in a state were your volume steps are 5 and your
volume is 5. That's full volume! This fixes that issue.
-So it basically keeps the volume from jumping around while your
changing volume steps. It may be a little lower but should be
very close.

Change-Id: I264fc1a364eb62862710451c370102d110c095a7
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Ziauddin Sameer <ziauddinsameer@gmail.com>

--- a/res/xml/colt_enigma_volume.xml
+++ b/res/xml/colt_enigma_volume.xml
@@ -38,4 +38,10 @@
             android:defaultValue="@string/volume_panel_aosp_val" />
     </PreferenceCategory>
 
+        <!-- Volume Steps -->
+        <PreferenceScreen
+            android:key="volume_steps"
+            android:title="@string/volume_steps_title"
+            android:fragment="com.colt.enigma.fragments.VolumeSteps" />
+
 </PreferenceScreen>
