--- a/res/xml/colt_enigma_power.xml
+++ b/res/xml/colt_enigma_power.xml
@@ -15,4 +15,20 @@
     android:title="@string/powermenu_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceCategory
+        android:key="power_button_category"
+        android:title="@string/power_button_category_title" />
+
+        <com.colt.enigma.preference.SecureSettingSwitchPreference
+            android:key="advanced_reboot"
+            android:title="@string/global_actions_advanced_reboot_title"
+            android:summary="@string/global_actions_advanced_reboot_summary"
+            android:defaultValue="true" />
+
+        <Preference
+            android:key="global_actions"
+            android:title="@string/global_actions_title"
+            android:summary="@string/global_actions_summary"
+            android:fragment="com.colt.enigma.fragments.GlobalActionsSettings" />
+     </PreferenceCategory
 </PreferenceScreen>
