--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -154,4 +154,8 @@
     <!-- Volume Wake -->
     <string name="volume_rocker_wake_title">Volume rocker wake</string>
     <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
+
+    <!-- Statusbar Tuner -->
+    <string name="statusbar_items_title">Statusbar items</string>
+    <string name="statusbar_items_summary">Various Statubar icons</string>
 </resources>
