--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -93,4 +93,8 @@
     <!-- Statusbar Tuner -->
     <string name="statusbar_items_title">Statusbar items</string>
     <string name="statusbar_items_summary">Various Statubar icons</string>
+
+    <!-- Navbar tuner -->
+    <string name="navbar_tuner_title">Navbar buttons</string>
+    <string name="navbar_tuner_summary">Navbar buttons Options</string>
 </resources>
