--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -162,4 +162,8 @@
     <!-- Navbar tuner -->
     <string name="navbar_tuner_title">Navbar buttons</string>
     <string name="navbar_tuner_summary">Navbar buttons Options</string>
+
+    <!-- Incall Home button behavior-->
+    <string name="allow_incall_home_title">Home button when ringing</string>
+    <string name="allow_incall_home_summary">Allow to use Home button when device is ringing</string>
 </resources>
