--- a/res/xml/colt_enigma_button.xml
+++ b/res/xml/colt_enigma_button.xml
@@ -20,4 +20,9 @@
         android:fragment="com.colt.enigma.fragments.VolumeRockerSettings"
         android:title="@string/volume_title" />
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
+        android:key="allow_incall_home"
+        android:title="@string/allow_incall_home_title"
+        android:summary="@string/allow_incall_home_summary"
+        android:defaultValue="true" />
 </PreferenceScreen>
