--- a/res/values/colt_attrs.xml
+++ b/res/values/colt_attrs.xml
@@ -14,4 +14,8 @@
         <attr name="defaultColorValue" format="integer" />
     </declare-styleable>
 
+    <declare-styleable name="SystemSettingListPreference">
+        <attr name="dependentValue" format="string"/>
+    </declare-styleable>
+
 </resources>
