NavigationBar visible from DUI: Initial checkin for Oreo
 included Protect against SystemUI FC when toggling navbar too fast by ezio84

Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -378,5 +378,9 @@
     <string name="text_charging_symbol_dollar">Dollar</string>
     <string name="text_charging_symbol_euro">Euro</string>
     <string name="text_charging_symbol_cent">Cent</string>
-  
+
+    <!-- Navbar visibility toggle -->
+    <string name="navbar_visibility">Nav Bar</string>
+    <string name="navbar_vis_summary">Enable-disable navigation bar</string>
+
 </resources>
