--- a/res/xml/colt_enigma_navigation.xml
+++ b/res/xml/colt_enigma_navigation.xml
@@ -15,6 +15,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >
 
+    <SwitchPreference
+        android:key="navbar_visibility"
+        android:title="@string/navbar_visibility"
+        android:summary="@string/navbar_vis_summary" />
+
     <Preference
             android:title="@string/navbar_tuner_title"
 	    android:summary="@string/navbar_tuner_summary" >
