incall vibration options [3/3] *allow setting vibration when call is connected *allow setting vibration when call is disconnected *allow setting vibration for call waiting *this works with google and aosp dialer :) SuperDroidBond-: Make it default on
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -1,157 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-  <!-- Copyright (C) 2017 ColtOS Project
- 
-      Licensed under the Apache License, Version 2.0 (the "License");
-      you may not use this file except in compliance with the License.
-      You may obtain a copy of the License at
- 
-           http://www.apache.org/licenses/LICENSE-2.0
- 
-      Unless required by applicable law or agreed to in writing, software
-      distributed under the License is distributed on an "AS IS" BASIS,
-      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-      See the License for the specific language governing permissions and
-      limitations under the License.
- -->
- <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-
-    <!-- Categories -->
-    <string name="colt_interface">The PandoraBox</string>
-    <string name="status_bar_icons_category_title">Icons</string>
-    <string name="various_toggles">Various Toggles</string>
-    <string name="status_bar_carrier_title">Carrier Label</string>
-
-    <string name="qs_header_title">QS Header Settings</string>
-    <string name="qs_footer_title">QS Footer Settings</string>
-    <string name="qs_misc_title">QS Misc Settings</string>
-
-    <!-- Lockscreen categories -->
-    <string name="lockscreen_shortcuts_category">Shortcuts</string>
-    <string name="lockscreen_interface_category">Interface</string>
-    <string name="lockscreen_misc_category">Miscellaneous</string>
-    <string name="lockscreen_bottom_decoration">LockScreen Bottom Decorations</string>
-    <string name="lockscreen_weather_category">LockScreen Weather Styling</string>
-
-    <!-- Colt Tabs Main  -->
-    <string name="colt_title">The PandoraBox</string>
-
-    <!-- Colt Tabs -->
-    <string name="status_bar_tab">Statusbar</string>
-    <string name="system_tab">System</string>
-    <string name="lockscreen_tab">Lockscreen</string>
-    <string name="buttons_tab">Buttons</string>
-    <string name="about_tab">About</string>
-
-    <!-- Categories -->
-    <string name="button_title">Buttons</string>
-    <string name="gestures_title">Gestures</string>
-    <string name="lockscreen_title">Lock screen</string>
-    <string name="misc_title">Miscellaneous</string>
-    <string name="navbar_title">Navigation bar</string>
-    <string name="powermenu_title">Power menu</string>
-    <string name="quicksettings_title">Quick Settings</string>
-    <string name="recents_title">Recents apps</string>
-    <string name="statusbar_title">Status bar</string>
-    <string name="volume_title">Volume rockers</string>
-    <string name="notifications_title">Notifications</string>
-
-    <!-- Summaries -->
-    <string name="quicksettings_summary">Quick settings Customizations</string>
-    <string name="buttonsettings_summary">Perform custom button actions</string>
-    <string name="lockscreen_summary">Various options for lockscreen</string>
-    <string name="statusbar_summary">Statusbar Customizations</string>
-    <string name="navbar_summary">Various options for Navbar</string>
-    <string name="powermenu_summary">Customize elements to be displayed in power menu</string>
-    <string name="gesture_summary">Gesture Customizations</string>
-    <string name="notifications_summary">Notifications and Incall settings</string>
-    <string name="misc_summary">Miscellaneous things to be checked here</string>
-    
-    <!-- Team Info -->
-    <string name="about_team_title">About ColtOS Team</string>
-    <string name="about_team_summary">Lets see who all are there :)</string>
-    <string name="colt_team_title">Meet Our ColtOS Team</string>
-    <string name="about_coltos_screen_title">About ColtOS</string>
-    <string name="about_coltos_title">So From Where ColtOS Arrived...</string>
-    <string name="coltos_about_summary">ColtOS was started by me (Rakesh Batra), Nitin, Nikhil and Debojit in early 2017 and it was a small but an effective group also and we all were in learning stage that\'s why Colt as a name arrived means a Learner. To start with ColtOS was based on LOS but now we have moved to aosp base and now in ColtOS Team we still have a team with some new members also and is just like a family to me, i would still like to mention the name of each and every member in ColtOS Team, 1. Rakesh Batra 2. Nitinkumar Chobhe 3. Roger.T 4.Debojit Deb, 5. Vinoth, 6. Santosh (SuperdroidBond), 7. Mukesh, 8. Athul, 9. Nikhil, 10. Meet Gohil, 11. Saurabh Hooda and 12. Anupam D Moran, that\'s the wonderfull team we have!!</string>
-
-    <!-- General strings -->
-    <string name="ok">OK</string>
-    <string name="reset">Reset</string>
-    <string name="cancel">Cancel</string>
-    <string name="save">Save</string>
-    <string name="default_string">Default</string>   
-    <string name="unit_percent">\u0025</string>
-    <string name="custom_string">Custom</string>
-
-    <!-- Color Picker -->
-    <string name="dialog_color_picker">Color Picker</string>
-    <string name="press_color_to_apply">Press on color below to apply</string>
-    <string name="arrow_right">→</string>
-    <string name="arrow_down">↓</string>
-    <string name="hex">Hex:</string>
-    <string name="hex_hint">#ff000000</string>
-    <string name="set">Set</string>
-    <string name="color_default">Default</string>
-
-    <!-- Accent Picker -->
-    <string name="accent_color_summary">Choose your desired accent</string>
-
-    <!-- Gradient Picker -->
-    <string name="gradient_color">Gradient picker</string>
-    <string name="gradient_summary">Gradient effect maker</string>
-
-    <!-- ColtDecorators -->
-    <string name="system_colors">Colt Decorations</string>
-    <string name="system_colors_summary">Decoration Lab</string>
-
-    <!-- Accent presets -->
-    <string name="accent_preset_0">AOSP Cinnamon</string>
-    <string name="accent_preset_1">AOSP Green</string>
-    <string name="accent_preset_2">AOSP Ocean</string>
-    <string name="accent_preset_3">AOSP Orchid</string>
-    <string name="accent_preset_4">AOSP Purple</string>
-    <string name="accent_preset_5">AOSP Space</string>
-    <string name="accent_preset_6">AndroidOneGreen</string>
-    <string name="accent_preset_7">AospaGreen</string>
-    <string name="accent_preset_8">AtlantisGreen</string>
-    <string name="accent_preset_9">AzureRadiance</string>
-    <string name="accent_preset_10">black</string>
-    <string name="accent_preset_11">CocaColaRed</string>
-    <string name="accent_preset_12">DiscordPurple</string>
-    <string name="accent_preset_13">ElectricViolet</string>
-    <string name="accent_preset_14">FacebookBlue</string>
-    <string name="accent_preset_15">FiBlue</string>
-    <string name="accent_preset_16">InstagramCerise</string>
-    <string name="accent_preset_17">JollibeeCrimson</string>
-    <string name="accent_preset_18">MarsOrange</string>
-    <string name="accent_preset_19">MonsterEnergyGreen</string>
-    <string name="accent_preset_20">NextbitMint</string>
-    <string name="accent_preset_21">NovaYellow</string>
-    <string name="accent_preset_22">OneplusRed</string>
-    <string name="accent_preset_23">PepsiBlue</string>
-    <string name="accent_preset_24">PersianRed</string>
-    <string name="accent_preset_25">PocophoneYellow</string>
-    <string name="accent_preset_26">RazerGreen</string>
-    <string name="accent_preset_27">SamsungBlue</string>
-    <string name="accent_preset_28">SlateSpruce</string>
-    <string name="accent_preset_29">SpotifyGreen</string>
-    <string name="accent_preset_30">StarbucksGreen</string>
-    <string name="accent_preset_31">teal</string>
-    <string name="accent_preset_32">TorchPink</string>
-    <string name="accent_preset_33">TwitchPurple</string>
-    <string name="accent_preset_34">TwitterBlue</string>
-    <string name="accent_preset_35">white</string>
-    <string name="accent_preset_36">XboxGreen</string>
-    <string name="accent_preset_37">XiaomiOrange</string>
-    <string name="accent_preset_title">Accent preset</string>
-
-    <!-- Volume rocker music control -->
-    <string name="volume_rocker_music_controls_title">Playback control</string>
-    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
-
-    <!-- Volume Wake -->
-    <string name="volume_rocker_wake_title">Volume rocker wake</string>
-    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
 
     <!-- Statusbar Tuner -->
     <string name="statusbar_items_title">Statusbar items</string>
@@ -333,4 +179,10 @@
 
     <!-- Lockscreen icons -->
     <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>        
+
+    <!-- Incall vibrate options -->
+    <string name="incall_vibration_category">In-call vibration options</string>
+    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
+    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
+    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
 </resources>
