Statusbar Clock n Date customization (2/2)

--- a/res/xml/colt_enigma_statusbar.xml
+++ b/res/xml/colt_enigma_statusbar.xml
@@ -41,4 +41,10 @@
         android:summary="@string/roaming_indicator_icon_summary"
         android:defaultValue="true" />
 
+    <Preference
+         android:key="clock_settings"
+         android:title="@string/clock_style_category_title"
+         android:summary="@string/clock_style_category_summary"
+         android:fragment="com.colt.enigma.fragments.ClockSettings" />
+
 </PreferenceScreen>
