--- a/res/xml/colt_enigma_lockscreen.xml
+++ b/res/xml/colt_enigma_lockscreen.xml
@@ -20,4 +20,16 @@
         android:title="@string/lockscreen_battery_info_title"
         android:summary="@string/lockscreen_battery_info_summary"
         android:defaultValue="true" />
+
+    <PreferenceCategory
+         android:key="dtts_category"
+         android:title="@string/dtts_category_header" >
+
+        <com.colt.enigma.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_lockscreen"
+            android:title="@string/double_tap_to_sleep_lockscreen_title"
+            android:summary="@string/double_tap_to_sleep_lockscreen_summary"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
