--- a/res/xml/colt_enigma_gestures.xml
+++ b/res/xml/colt_enigma_gestures.xml
@@ -15,4 +15,10 @@
     android:title="@string/gestures_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_gesture"
+        android:title="@string/double_tap_to_sleep_statusbar_title"
+        android:summary="@string/double_tap_to_sleep_statusbar_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
