[SQUASHED] Custom Carrier Label & Carrier Label Placement [1/2]
SuperDroidBond Edit- Port Carrier Label Font Size, Style & Color from AOSP Ex & RR Nougat
                     Use the lock clock font arrays.

--- a/res/xml/colt_enigma_statusbar.xml
+++ b/res/xml/colt_enigma_statusbar.xml
@@ -47,4 +47,10 @@
          android:summary="@string/clock_style_category_summary"
          android:fragment="com.colt.enigma.fragments.ClockSettings" />
 
+    <Preference
+         android:key="carrierlabel_settings"
+         android:title="@string/carrier_label_category_title"
+         android:summary="@string/carrier_label_category_summary"
+         android:fragment="com.colt.enigma.fragments.CarrierLabelSettings" />
+
 </PreferenceScreen>
