--- a/res/xml/colt_enigma_statusbar.xml
+++ b/res/xml/colt_enigma_statusbar.xml
@@ -22,4 +22,11 @@
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
     </Preference>
+
+    <com.colt.enigma.preference.SystemSettingSwitchPreference 
+         android:key="show_fourg_icon" 
+         android:title="@string/show_fourg_icon_title" 
+         android:summary="@string/show_fourg_icon_summary"
+         android:defaultValue="false"/>
+
 </PreferenceScreen>
