--- a/res/xml/colt_enigma_gestures.xml
+++ b/res/xml/colt_enigma_gestures.xml
@@ -21,4 +21,10 @@
         android:summary="@string/double_tap_to_sleep_statusbar_summary"
         android:defaultValue="true" />
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference 
+        android:key="three_finger_gesture" 
+        android:title="@string/three_finger_gesture" 
+        android:summary="@string/three_finger_gesture_summary" 
+        android:defaultValue="false" /> 
+
 </PreferenceScreen>
