--- a/res/xml/colt_enigma_statusbar.xml
+++ b/res/xml/colt_enigma_statusbar.xml
@@ -47,6 +47,12 @@
         android:summary="@string/roaming_indicator_icon_summary"
         android:defaultValue="true" />
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
+        android:key="status_bar_notif_count"
+        android:title="@string/status_bar_notif_count_title"
+        android:summary="@string/status_bar_notif_count_summary"
+        android:defaultValue="false" />
+
     <Preference
          android:key="clock_settings"
          android:title="@string/clock_style_category_title"
@@ -64,5 +70,4 @@
         android:title="@string/traffic_title"
         android:summary="@string/traffic_summary"
         android:fragment="com.colt.enigma.fragments.TrafficIndicators"/>
-
 </PreferenceScreen>
