--- a/res/xml/colt_enigma_volume.xml
+++ b/res/xml/colt_enigma_volume.xml
@@ -14,7 +14,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-     <com.colt.enigma.preference.SystemSettingSwitchPreference
+    <com.colt.enigma.preference.SystemSettingSeekBarPreference
+        android:key="volume_dialog_timeout"
+        android:title="@string/volume_dialog_timeout_title"
+        android:min="500"
+        android:max="10000"
+        android:defaultValue="3000"
+        settings:interval="100"
+        settings:unitsLeft=""
+        settings:unitsRight="ms" />
+
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
         android:key="volume_button_music_control"
         android:summary="@string/volume_rocker_music_controls_summary"
         android:title="@string/volume_rocker_music_controls_title"
