StatusbarClock: date right/left position [2/2]

--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -593,4 +593,9 @@
     <string name="lock_clock_font_notoserif_bold">NotoSerif Bold</string>
     <string name="lock_clock_font_notoserif_bold_italic">NotoSerif Bold Italic</string>
     <string name="lock_clock_font_gobold">GoBold Light</string>
+
+    <string name="clock_date_right">Right of time</string>
+    <string name="clock_date_left">Left of time</string>
+    <string name="clock_date_position">Date position</string>
+
 </resources>
