--- a/res/xml/colt_enigma_lockscreen.xml
+++ b/res/xml/colt_enigma_lockscreen.xml
@@ -29,6 +29,12 @@
             android:defaultValue="true" />
 
     <com.colt.enigma.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_charging_animation"
+        android:title="@string/lockscreen_charging_animation_title"
+        android:summary="@string/lockscreen_charging_animation_summary"
+        android:defaultValue="true" />
+
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
         android:title="@string/lockscreen_battery_info_title"
         android:summary="@string/lockscreen_battery_info_summary"
