--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -1,4 +1,4 @@
-+<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
   <!-- Copyright (C) 2017 ColtOS Project
  
       Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,6 +14,9 @@
       limitations under the License.
  -->
  <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  
+  <!-- Colt Tabs Main  -->
+    <string name="colt_settings_title">The PandoraBox</string>
  
 
   <!-- Color Picker -->
@@ -26,5 +29,4 @@
     <string name="set">Set</string>
     <string name="color_default">Default</string>
 
-
- </resources>
+</resources>
