Add Haptic Feedback to tiles [2/2]

--- a/res/xml/colt_enigma_quicksettings.xml
+++ b/res/xml/colt_enigma_quicksettings.xml
@@ -37,6 +37,11 @@
         android:entryValues="@array/quick_pulldown_values"
         android:defaultValue="1" />
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
+        android:key="quick_settings_vibrate"
+        android:title="@string/quick_settings_vibrate_title"
+        android:summary="@string/quick_settings_vibrate_summary"
+        android:defaultValue="false"/>
 
     <com.colt.enigma.preference.SystemSettingSwitchPreference
         android:key="qs_tile_title_visibility"
