--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -431,4 +431,9 @@
 
     <string name="less_boring_heads_up_title">Less boring heads up</string>
     <string name="less_boring_heads_up_summary">Quickly disable heads up for all apps but keep them enabled for dialer and messaging apps</string>
+
+    <!-- QuickSettings haptic feedback -->
+    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
+    <string name="quick_settings_vibrate_summary">Vibrate when QS tiles are pressed</string>
+
 </resources>
