Less boring heads up option [2/2]
Change-Id: Ic6a2fae172d43149e426b837dfb6531c55730bf0

--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -429,4 +429,6 @@
     <string name="show_lockscreen_media_art_title">Show media art</string>
     <string name="lockscreen_media_art_options_title">Lockscreen media art</string>
 
+    <string name="less_boring_heads_up_title">Less boring heads up</string>
+    <string name="less_boring_heads_up_summary">Quickly disable heads up for all apps but keep them enabled for dialer and messaging apps</string>
 </resources>
