--- a/res/xml/colt_enigma_notifications.xml
+++ b/res/xml/colt_enigma_notifications.xml
@@ -35,4 +35,11 @@
             android:defaultValue="true" />
 
     </PreferenceCategory>
+
+        <com.colt.enigma.preference.SystemSettingSwitchPreference
+            android:key="less_boring_heads_up"
+            android:title="@string/less_boring_heads_up_title"
+            android:summary="@string/less_boring_heads_up_summary"
+            android:defaultValue="false" />
+
 </PreferenceScreen>
