--- a/res/values/colt_arrays.xml
+++ b/res/values/colt_arrays.xml
@@ -283,4 +283,18 @@
         <item>@string/volume_panel_oreo_val</item>
         <item>@string/volume_panel_tiled_val</item>
     </string-array>
+
+    <!-- Quick Pulldown -->
+    <string-array name="quick_pulldown_entries"> 
+       <item>@string/quick_pulldown_none</item> 
+       <item>@string/quick_pulldown_right</item> 
+       <item>@string/quick_pulldown_left</item>
+    </string-array>
+
+    <string-array name="quick_pulldown_values" translatable="false"> 
+      <item>0</item>
+      <item>1</item>
+      <item>2</item>
+    </string-array>
+
 </resources>
