--- a/res/xml/colt_enigma_notifications.xml
+++ b/res/xml/colt_enigma_notifications.xml
@@ -42,4 +42,10 @@
             android:summary="@string/less_boring_heads_up_summary"
             android:defaultValue="false" />
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference 
+        android:key="notification_sound_vib_screen_on" 
+        android:title="@string/notification_sound_vib_screen_on_title" 
+        android:summary="@string/notification_sound_vib_screen_on_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
