Add toggle for notifications smart reply [2/2]
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Change-Id: I6291248b3c62dd3a115ef272fb08b24bb7568acc
Signed-off-by: SonalSingh18 <sonal.singh.19993@gmail.com>

--- a/res/xml/colt_enigma_notifications.xml
+++ b/res/xml/colt_enigma_notifications.xml
@@ -61,6 +61,12 @@
         android:dependency="notification_headers"
         android:defaultValue="false" />
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
+        android:key="hide_smart_replies"
+        android:title="@string/hide_smart_replies_title"
+        android:summary="@string/hide_smart_replies_summary"
+        android:defaultValue="false"/>
+
     <PreferenceCategory
         android:key="pulse_ambient_light_category"
         android:title="@string/pulse_ambient_light_category" >
