--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -90,4 +90,11 @@
     <string name="set">Set</string>
     <string name="color_default">Default</string>
 
+    <!-- Accent Picker -->
+    <string name="accent_color">Accent picker</string>
+    <string name="accent_color_summary">Choose your desired accent</string>
+
+    <!-- ColtDecorators -->
+    <string name="system_colors">Colt Decorations</string>
+    <string name="system_colors_summary">Decoration Lab</string>
 </resources>
