Add battery styles and customizations for Android 11 [2/2]
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/xml/statusbar_tab.xml
+++ b/res/xml/statusbar_tab.xml
@@ -27,6 +27,13 @@
             android:fragment="com.colt.enigma.fragments.StatusBarSettings"
 	    android:summary="@string/statusbar_summary" />
 
+	<!-- Battery Mode -->
+	<com.colt.enigma.preference.CategoryColtPreference
+	    android:key="battery_mode" 
+            android:title="@string/battery_mode_title" 
+            android:summary="@string/battery_mode_summary"
+            android:fragment="com.colt.enigma.fragments.BatteryMode" />
+
         <!-- Quick Settings -->
         <com.colt.enigma.preference.CategoryColtPreference
 	    android:key="quicksettings_category"
