--- a/res/xml/colt_enigma_lockscreen.xml
+++ b/res/xml/colt_enigma_lockscreen.xml
@@ -74,4 +74,10 @@
             android:summary="@string/transparent_lockscreen_notification_summary"
             android:defaultValue="false" />
 
+    <com.colt.enigma.preference.SecureSettingSwitchPreference
+        android:key="hide_lockicon"
+        android:title="@string/hide_lockicon_title"
+        android:summary="@string/hide_lockicon_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
