--- a/res/xml/colt_enigma_lockscreen.xml
+++ b/res/xml/colt_enigma_lockscreen.xml
@@ -89,11 +89,24 @@
         android:summary="@string/hide_lockicon_summary"
         android:defaultValue="true" />
 
+    <!-- FOD customization options -->
+    <PreferenceCategory
+        android:key="fod_icon_picker"
+        android:title="@string/fod_icon_picker_category_title">
+
+        <!-- FOD recognizing animation -->
+        <com.colt.enigma.preference.SystemSettingSwitchPreference
+            android:key="fod_recognizing_animation"
+            android:title="@string/fod_recog_animation"
+            android:summary="@string/fod_recog_animation_summary"
+            android:defaultValue="false" />
+
         <!-- FOD Nightlight -->
-    <com.colt.enigma.preference.SystemSettingSwitchPreference
+        <com.colt.enigma.preference.SystemSettingSwitchPreference
             android:key="fod_night_light"
             android:title="@string/fod_night_light_title"
             android:summary="@string/fod_night_light_summary"
             android:defaultValue="@*android:bool/disable_fod_night_light"  />
 
+    </PreferenceCategory>
 </PreferenceScreen>
