--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -231,5 +231,6 @@
     <string name="theme_type_solarized_dark">Solarized dark</string>
     <string name="theme_type_baked_green">Baked Green</string>
     <string name="theme_type_choco_x">Choco Colt</string>
+    <string name="theme_type_dark_grey">Dark Grey</string>
 
 </resources>
