--- a/res/xml/colt_settings_themes.xml
+++ b/res/xml/colt_settings_themes.xml
@@ -3,10 +3,11 @@
     android:title="@string/accent_color">
 
     <net.margaritov.preference.colorpicker.ColorPickerPreference
-            android:key="accent_color"
-            android:title="@string/accent_color"
-            android:defaultValue="0xffffff"
-            android:persistent="false" />
+        android:key="accent_color"
+        android:title="@string/accent_color"
+        android:summary="@string/accent_summary"
+        android:defaultValue="0x4285F4"
+        android:persistent="false" />
 
     <net.margaritov.preference.colorpicker.ColorPickerPreference
         android:key="gradient_color"
@@ -14,5 +15,12 @@
         android:summary="@string/gradient_summary"
         android:defaultValue="0xffffff"
         android:persistent="false" />
+
+    <ListPreference
+        android:key="accent_preset"
+        android:title="@string/accent_preset_title"
+        android:persistent="false"
+        android:entries="@array/accent_presets_entries"
+        android:entryValues="@array/accent_presets_values" />  
 
 </PreferenceScreen>
