Themes: Add DU's PitchBlack Theme [3/3]
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/values/colt_arrays.xml
+++ b/res/values/colt_arrays.xml
@@ -148,6 +148,7 @@
 	<item>@string/theme_type_baked_green</item>
         <item>@string/theme_type_choco_x</item>
 	<item>@string/theme_type_dark_grey</item>
+	<item>@string/theme_type_du_pitchblack</item>
     </string-array>
 
     <string-array name="theme_type_values">
@@ -157,5 +158,6 @@
 	<item>4</item>
         <item>5</item>
 	<item>6</item>
+	<item>7</item>
     </string-array>
 </resources>
