--- a/res/values/colt_arrays.xml
+++ b/res/values/colt_arrays.xml
@@ -149,6 +149,7 @@
         <item>@string/theme_type_choco_x</item>
 	<item>@string/theme_type_dark_grey</item>
 	<item>@string/theme_type_du_pitchblack</item>
+	<item>@string/theme_type_material_ocean</item>
     </string-array>
 
     <string-array name="theme_type_values">
@@ -159,5 +160,6 @@
         <item>5</item>
 	<item>6</item>
 	<item>7</item>
+	<item>8</item>
     </string-array>
 </resources>
