--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -233,5 +233,6 @@
     <string name="theme_type_choco_x">Choco Colt</string>
     <string name="theme_type_dark_grey">Dark Grey</string>
     <string name="theme_type_du_pitchblack">Pitch black</string>
+    <string name="theme_type_material_ocean">Material Ocean</string>
 
 </resources>
