allow transparent notifications on lockscreen [2/2]
Change-Id: I4f4c54539705d695aea1905a95962c4f2ae2761a

--- a/res/xml/colt_enigma_lockscreen.xml
+++ b/res/xml/colt_enigma_lockscreen.xml
@@ -62,4 +62,10 @@
             settings:units="dp"/>
     </PreferenceCategory>
 
+        <com.colt.enigma.preference.SecureSettingSwitchPreference
+            android:key="lock_screen_transparent_notifications_enabled"
+            android:title="@string/transparent_lockscreen_notification_title"
+            android:summary="@string/transparent_lockscreen_notification_summary"
+            android:defaultValue="false" />
+
 </PreferenceScreen>
