Pulse initial checkin for Android 11 [4/4]
Squashed in:
* Pulse navbar audio gfx visualizer for Android 10 [3/4] - bigrushdog
* Add automatic album art color mode for navbar pulse [3/3] - ezio84
* Extend NavBar Pulse to LockScreen [2/2] - neobuddy89

Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/xml/colt_enigma_misc.xml
+++ b/res/xml/colt_enigma_misc.xml
@@ -21,4 +21,11 @@
             android:summary="@string/allow_signature_fake_summary"
             android:defaultValue="false" />
 
+    <!-- Pulse -->
+    <Preference
+        android:key="pulse"
+        android:title="@string/pulse_settings"
+        android:summary="@string/pulse_settings_summary"
+        android:fragment="com.colt.enigma.fragments.PulseSettings" />
+
 </PreferenceScreen>
