--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -247,4 +247,7 @@
     <string name="theme_option_reset_title">Reset Theme Options</string>
     <string name="theme_option_reset_message">Are you sure you want to reset themes-accent to default?</string>
 
+    <!-- Customization titles -->
+    <string name="themes_ui">ColtOS Themes UI</string>
+    <string name="theme_customization_sysui_icon_title">Statusbar icon</string>
 </resources>
