--- a/res/xml/colt_enigma_themes.xml
+++ b/res/xml/colt_enigma_themes.xml
@@ -3,6 +3,9 @@
     android:title="@string/system_colors">
 
     <ListPreference
+	android:layout="@layout/base_preview" />
+
+    <ListPreference
         android:key="theme_switch"
         android:title="@string/theme_type_title"
 	android:summary="%s"
@@ -33,6 +36,13 @@
         android:entryValues="@array/accent_presets_values" />  
 
     <ListPreference
+        android:layout="@layout/font_preview" />
+
+    <PreferenceCategory
+        android:key="theme_customization_category"
+        android:title="@string/themes_ui">
+
+    <ListPreference
         android:key="android.theme.customization.font"
         android:title="@string/theme_customization_font_title"/>
 
@@ -43,4 +53,6 @@
     <ListPreference
         android:key="android.theme.customization.icon_pack.android"
         android:title="@string/theme_customization_sysui_icon_title"/>
+
+    </PreferenceCategory>
 </PreferenceScreen>
