--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -705,6 +705,8 @@
     <string name="qs_show_drag_handle_summary">Show drag handle below the quick settings panel</string>
 
     <!-- Pulse -->
+    <string name="show_ambient_pulse_title">Ambient Pulse</string>
+    <string name="show_ambient_pulse_summary">Audio graphic equalizer on the ambient screen</string>
     <string name="pulse_help_policy_notice_summary">Pulse is a brilliant audio graphic equalizer when music plays on the device</string>
     <string name="pulse_settings">Pulse</string>
     <string name="pulse_settings_summary">Audio graphic equalizer for navigation bar and lockscreen</string>
