Themes must be under same roof (1/2)
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/xml/colt_enigma_themes.xml
+++ b/res/xml/colt_enigma_themes.xml
@@ -32,4 +32,15 @@
         android:entries="@array/accent_presets_entries"
         android:entryValues="@array/accent_presets_values" />  
 
+    <ListPreference
+        android:key="android.theme.customization.font"
+        android:title="@string/theme_customization_font_title"/>
+
+    <ListPreference
+        android:key="android.theme.customization.adaptive_icon_shape"
+        android:title="@string/theme_customization_icon_shape_title"/>
+
+    <ListPreference
+        android:key="android.theme.customization.icon_pack.android"
+        android:title="@string/theme_customization_sysui_icon_title"/>
 </PreferenceScreen>
