--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -697,4 +697,7 @@
     <string name="qs_bg_use_new_tint">New tint style</string>
     <string name="qs_bg_use_new_tint_summary">Enable the new QS tint style (Requires reboot)</string>
 
+    <string name="qs_bg_use_disco">QS tile disco</string>
+    <string name="qs_bg_use_disco_summary">Make your QS Tiles colorful!</string>
+
 </resources>
