--- a/res/xml/colt_enigma_themes.xml
+++ b/res/xml/colt_enigma_themes.xml
@@ -60,6 +60,12 @@
         android:summary="@string/qs_bg_use_new_tint_summary"
         android:defaultValue="false" />
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
+        android:key="qs_tiles_bg_disco"
+        android:title="@string/qs_bg_use_disco"
+        android:summary="@string/qs_bg_use_disco_summary"
+        android:defaultValue="false" />
+
     <ListPreference
 	android:layout="@layout/fonts_base_preview"
         android:selectable="false" />
