--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -97,4 +97,12 @@
     <!-- Navbar tuner -->
     <string name="navbar_tuner_title">Navbar buttons</string>
     <string name="navbar_tuner_summary">Navbar buttons Options</string>
+
+    <!-- Bottom navigation -->
+    <string name="coltos_title">ColtEnigma</string>
+    <string name="bottom_nav_system_title">System</string>
+    <string name="bottom_nav_lockscreen_title">Lockscreen</string>
+    <string name="bottom_nav_statusbar_title">Statusbar</string>
+    <string name="bottom_nav_button_title">Buttons</string>
+    <string name="bottom_nav_about_title">AboutTeam</string>
 </resources>
