New bubblestyle bottom nav
Thanks to the great work by https://github.com/gauravk95/bubble-navigation
and ref commit : https://github.com/Corvus-ROM/android_packages_apps_DU-Tweaks/commit/f919df10daf402bc22d7d594262d79873465e8c6#

Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/values/colt_dimens.xml
+++ b/res/values/colt_dimens.xml
@@ -15,8 +15,16 @@
 <resources>
     <dimen name="picker_circle_preview_size">26dp</dimen>
     <dimen name="alert_dialog_padding_material">20dp</dimen>
+    <dimen name="floating_widget_view_padding">10dp</dimen>
+    <dimen name="floating_widget_window_padding">10dp</dimen>
 
     <!-- Shortcut picker -->
     <dimen name="shortcut_picker_left_padding">70dip</dimen>
 
+    <dimen name="default_corner_radii">56dp</dimen>
+    <dimen name="default_nav_item_padding">10dp</dimen>
+    <dimen name="default_nav_item_text_size">11sp</dimen>
+    <dimen name="default_nav_item_text_padding">8dp</dimen>
+    <dimen name="default_nav_item_title_max_width">80dp</dimen>
+    <dimen name="default_icon_size">24dp</dimen>
 </resources>
