Rollback out default summary layout
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/layout/category_colt_preference.xml
+++ b/res/layout/category_colt_preference.xml
@@ -73,8 +73,12 @@
         android:layout_centerInParent="true"
         android:layout_gravity="center_vertical"
         android:gravity="center"
+	android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
 	android:textStyle="bold"
-        android:textSize="14sp"
+        android:textSize="13sp"
 	android:textColor="?android:attr/textColorSecondary"/>
 
 </RelativeLayout>
