Add a toggle for the new QS tint [2/2]
Signed-off-by: Saikiran <bjsaikiran@gmail.com>

--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -693,4 +693,8 @@
     <string name="use_old_mobiletype_title">Old mobiletype</string>
     <string name="use_old_mobiletype_summary">Use pre-p mobiletype icons for signal (SystemUI reboot required)</string>
 
+    <!-- QS Tint -->
+    <string name="qs_bg_use_new_tint">New tint style</string>
+    <string name="qs_bg_use_new_tint_summary">Enable the new QS tint style (Requires reboot)</string>
+
 </resources>
