--- a/res/xml/colt_enigma_themes.xml
+++ b/res/xml/colt_enigma_themes.xml
@@ -54,6 +54,12 @@
 	android:icon="@drawable/ic_stat_icons"
         android:title="@string/theme_customization_sysui_icon_title"/>
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
+        android:key="qs_panel_bg_use_new_tint"
+        android:title="@string/qs_bg_use_new_tint"
+        android:summary="@string/qs_bg_use_new_tint_summary"
+        android:defaultValue="false" />
+
     <ListPreference
 	android:layout="@layout/fonts_base_preview"
         android:selectable="false" />
