--- a/res/layout/colt.xml
+++ b/res/layout/colt.xml
@@ -26,7 +26,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/tabs"/>
 
-    <com.colt.settings.customtab.IconTitleIndicator
+    <com.colt.enigma.customtab.IconTitleIndicator
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
