--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -383,4 +383,12 @@
     <string name="navbar_visibility">Nav Bar</string>
     <string name="navbar_vis_summary">Enable-disable navigation bar</string>
 
+    <!-- Quick Settings brightness slider -->
+    <string name="qs_show_brightness_slider_title">Brightness slider</string>
+    <string name="qs_show_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
+    <string name="qs_show_auto_brightness_title">Autobrightness icon</string>
+    <string name="qs_show_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
+    <string name="qs_show_brightness_slider_show_never">Never show</string>
+    <string name="qs_show_brightness_slider_show_expanded">Show when expanded</string>
+    <string name="qs_show_brightness_slider_show_always">Show always</string>
 </resources>
