--- a/res/xml/colt_enigma_quicksettings.xml
+++ b/res/xml/colt_enigma_quicksettings.xml
@@ -15,4 +15,19 @@
     android:title="@string/quicksettings_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <com.colt.enigma.preference.SecureSettingListPreference
+        android:key="qs_show_brightness_slider"
+        android:title="@string/qs_show_brightness_slider_title"
+        android:summary="%s"
+        android:dialogTitle="@string/qs_show_brightness_slider_title"
+        android:entries="@array/qs_show_brightness_slider_entries"
+        android:entryValues="@array/qs_show_brightness_slider_values"
+        android:defaultValue="1" />
+
+    <com.colt.enigma.preference.SecureSettingSwitchPreference
+        android:key="qs_show_auto_brightness"
+        android:title="@string/qs_show_auto_brightness_title"
+        android:summary="@string/qs_show_auto_brightness_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
